--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "register-service-worker": "^1.7.1",
     "v-animate-css": "0.0.3",
     "vue": "^2.6.11",
+    "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.1.6",
+    "vue-simple-alert": "^1.1.1",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
   },
