--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "esri-loader": "^2.14.0",
     "material-design-icons-iconfont": "^5.0.1",
     "register-service-worker": "^1.7.1",
     "v-animate-css": "0.0.3",
