--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "esri-loader": "^2.14.0",
+    "js-file-download": "^0.4.12",
     "material-design-icons-iconfont": "^5.0.1",
     "register-service-worker": "^1.7.1",
     "v-animate-css": "0.0.3",
